--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "The HTML Presentation Framework",
   "homepage": "http://lab.hakim.se/reveal-js",
   "subdomain": "revealjs",
-  "main": "plugin/hosted/index.js",
 "scripts": {
   "start": "grunt serve"
 },
@@ -47,5 +46,6 @@
   "directories": {
     "test": "test"
   },
-  "license": "k"
+  "license": "k",
+    "main": "plugin/hosted/index.js"
 }
